--- a/personale/index.html
+++ b/personale/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accedi</title>
+    <title>Green Vehicle Demand</title>
+    <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +13,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-          <img src="../immagini/logo.png" alt="" height="45px">
+          <img src="../immagini/logo.png" alt="" height="45px" hspace="10">
           <a class="navbar-brand" href="../news/index.html">Green Vehicle Demand</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +22,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="../index.html">Home</a>
               <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
-              <a class="nav-link active" href="#">Incentivi</a>
+              <a class="nav-link active" href="../incentivi/incentivi.html">Incentivi</a>
             </div>
           </div>
         </div>
