--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Green Vehicle Demand</title>
+    <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-          <img src="../immagini/logo.png" alt="" height="45px">
+          <img src="../immagini/logo.png" alt="" height="45px" hspace="10">
           <a class="navbar-brand" href="#">Green Vehicle Demand</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
               aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +25,7 @@
               <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
-                  <a class="nav-link" href="">Incentivi</a>
+                  <a class="nav-link" href="../incentivi/incentivi.html">Incentivi</a>
                   <a class="nav-link" href="about-us.html">Chi siamo?</a>
               </div>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
