--- a/incentivi/incentivi.html
+++ b/incentivi/incentivi.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
                     <a class="nav-link" href="#">Incentivi</a>
-                    <a class="nav-link" href="">Chi siamo?</a>
+                    <a class="nav-link" href="../about-us/about-us.html">Chi siamo?</a>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
