inserita la pagina incentivi

--- a/incentivi/incentivi.html
+++ b/incentivi/incentivi.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="./incentivi-style.css">
     <script src="../bootstrap.min.js" type="application/javascript"></script>
     <script src="https://unpkg.com/vue@3"></script>
 </head>
@@ -16,8 +17,8 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <img src="../immagini/logo.png" alt="" height="45px">
-            <a class="navbar-brand" href="#">Green Vehicle Demand</a>
+            <img src="../immagini/logo.png" alt="" height="45px" hspace="10">
+            <a class="navbar-brand" href="../index.html">Green Vehicle Demand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,13 +39,129 @@
             </div>
         </div>
     </nav>
+<!-- main -->
+    <main class="container" id="app">
+        <div class="row g-5">
+            <div class="align-content-center">
+                <img src="../immagini/img-incentivi.jpg" class="img-fluid rounded">
+                <!-- Inizio articolo testuale -->
+                <div class="text-center mt-4 mb-2">
+                    <p class="h1">Incentivi auto 2022</p>
+                </div>
+                <div class="data-articolo">28 Maggio 2022</div>
+                <article class="pb-md-4 pt-5 mb-md-4">
+
+                    <p class="h3 titolo-articolo-incentivi">Al via dal 16 Maggio</p>
+                    <div class="testo-articolo text-justify">
+
+                        Gli incentivi auto 2022 sono finalmente realtà: il Dpcm che modula il bonus in base alle
+                        emissioni
+                        di
+                        CO2 e alla disponibilità o meno di un'auto da rottamare è stato infatti firmato, approvato dalla
+                        Corte dei Conti e
+                        pubblicato il 16 maggio in Gazzetta Ufficiale, mettendo sul piatto 650 milioni di euro a
+                        sostegno
+                        delle immatricolazioni.
+
+                        Rimane ancora un passaggio, ovvero l'aggiornamento del portale per la prenotazione dei fondi da
+                        parte delle
+                        concessionarie, ma si tratta di un fatto prettamente tecnico e non burocratico e ogni auto - che
+                        rientra nelle fasce di emissioni e di prezzo -
+                        acquistata a partire dal 16 maggio potrà usufruire degli incentivi 2022.
+                    </div>
+
+                    <p class="h3 titolo-articolo-incentivi">Le più green: elettriche e plugin</p>
+                    <p class="text-justify testo-articolo-up-pic">
+                        Lo sconto massimo è riservato ai futuri acquirenti di auto elettriche e delle ibride plug-in
+                        più
+                        efficienti, ovvero le auto con emissioni
+                        comprese nella fascia 0-20 g/km di CO2, pari a 5.000 euro con auto da rottamare (veicolo di
+                        proprietà da almeno 12 mesi, omologazione Euro 0-Euro 5) e a 3.000 euro senza rottamazione.
+
+                        Non tutte le auto elettriche possono però godere dell'incentivo statale e anche le migliori
+                        plug-in hybrid sono al momento escluse dal bonus.
+
+                        Questo perché la fascia 0-20 ha un limite di spesa per le auto nuove fissato in 35.000 euro
+                        senza IVA, Ipt e messa su strada, ma con optional compresi. Aggiungendo anche l'IVA e gli
+                        accessori non possono costare quindi più di 42.700 euro. Un tetto particolarmente basso che
+                        lascia fuori molti modelli con le autonomie più alte, oltre che l'auto elettrica più venduta
+                        in
+                        Italia a marzo (la Tesla Model Y) assieme alla quarta (la Tesla Model 3). Gli incentivi auto
+                        elettriche 2022 prevedono uno stanziamento di 220 milioni di euro.
+                    </p>
+                    <img src="../immagini/id-buzz.jpg" class=" immagini-articlo-incentivi rounded">
+                    <p class="h3 titolo-articolo-incentivi-bottom-pic">Non solo auto</p>
+                    <p class="text-justify testo-articolo">
+                        <li>Veicoli commerciali</li>
+                        Devono essere di categoria N1 e N2, nuovi di fabbrica, 100% elettrici e deve essere rottamato un
+                        veicolo omologato in una classe inferiore ad Euro 4. In questo caso gli incentivi sono pari a:
+
+                    <ul> - 4.000 euro per i veicoli N1 fino a 1,5 tonnellate</ul>
+                    <ul> - 6.000 euro per i veicoli N1 superiori a 1,5 tonnellate e fino a 3,49 tonnellate</ul>
+                    <ul> - 12.000 euro per i veicoli N2 da 3,5 tonnellate fino a 7 tonnellate</ul>
+                    <ul> - 14.000 euro per i veicoli N2 superiori a 7 tonnellate e fino a 12 tonnellate</ul>
+
+                    <li>Ciclomotori e motocicli elettrici e ibridi</li>
+
+                    Di categoria L1e, L2e, L3e, L4e, L5e, L6e, L7
+
+                    <ul> - Contributo pari al 30% del prezzo di acquisto, fino al massimo 3.000 euro senza rottamazione
+                    </ul>
+                    <ul> - Contributo pari al 40% del prezzo fino a 4.000 mila euro se viene rottamata una moto in una
+                        classe da Euro 0 a 3</ul>
+
+                    <li>Ciclomotori e motocicli termici</li>
+
+                    Devono essere nuovi di fabbrica, di categoria L1e, L2e, L3e, L4e, L5e, L6e, L7)
+
+                    <ul> - Contributo del 40% del prezzo, a fronte di uno sconto del venditore del 5%, con prezzo
+                        massimo di 2.500 euro.</ul>
+
+                    <li>Car sharing</li>
+
+                    Una piccola percentuale dei fondi è riservata alle società di car sharing per l'acquisto dei veicoli
+                    elettrici, ibridi, plug-in.
+                    </p>
+                    <p class="h3 titolo-articolo-incentivi">Termine 2022 incentivi auto</p>
+                    <p class="text-justify testo-articolo">
+                        Come recita il dpcm entrato ieri in Gazzetta Ufficiale gli incentivi auto 2022 termineranno il
+                        31 dicembre 2022, a meno che - cosa ben più che probabile - i fondi non si azzerino prima. C'è
+                        la possibilità però di rimodulare le cifre, spostando le risorse da una fascia all'altra. Cosa
+                        successa gli scorsi anni ma che avrebbe bisogno di un decreto ad hoc. La sensazione è che i
+                        fondi per le auto elettriche (220 milioni di euro) termineranno in un batter d'occhio e che a
+                        farne le spese sarà la terza fascia, quella comprendente le auto con emissioni comprese tra 61 e
+                        135 g/km.
+                    </p>
+
+                    <p class="h3 titolo-articolo-incentivi">Risorse per gli anni successivi</p>
+                    <p class="text-justify testo-articolo">
+                        Il Dpcm prevede stanziamenti anche per i prossimi anni, così suddivisi:
+
+                        <ul> - categoria 0-20 g/km finanziata con 230 milioni nel 2023 e 245 milioni nel 2024</ul>
+                        <ul> - categoria 21-60 g/km finanziata con 235 milioni nel 2023 e 245 milioni nel 2024</ul>
+                        <ul> - categoria 61-135 g/km finanziata con 150 milioni nel 2023 e 120 milioni nel 2024</ul>
+
+                        Se quindi i fondi per gli incentivi auto con emissioni comprese tra 0-20 e 21-60 g/km
+                        cresceranno di anno in anno, quelli per i modelli con emissioni 61-135 diminuiranno di 20
+                        milioni nel 2023 e di altri 30 nel 2024, sulla scia quindi della volontà di vendere sempre più
+                        auto a basse emissioni in Italia.
+                    </p>
+                </article>
+                <!-- Cosa aspetti? Fai ora un preventivo! -->
+            </div>
+        </div>
+    </main>
+
     <!--Footer-->
     <div class="container mt-5 p-3">
         <div class="row">
             <div class="text-left text-md-start">
                 <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
                     Pilla-Pascucci-Cutroni</span>
+                <br />
+
             </div>
         </div>
-        <script src="/news/app_news.js" type="application/javascript"></script>
+    </div>
+    <script src="/news/app_news.js" type="application/javascript"></script>
 </body>
