--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="auto/auto.php">Le nostre auto</a>
-                    <a class="nav-link" href="">Incentivi</a>
+                    <a class="nav-link" href="incentivi/incentivi.html">Incentivi</a>
                     <a class="nav-link" href="about-us/about-us.html">Chi siamo?</a>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
