inserita la sezione FAQ

--- a/incentivi/incentivi.html
+++ b/incentivi/incentivi.html
@@ -92,7 +92,7 @@
                     <img src="../immagini/id-buzz.jpg" class=" immagini-articlo-incentivi rounded">
                     <p class="h3 titolo-articolo-incentivi-bottom-pic">Non solo auto</p>
                     <p class="text-justify testo-articolo">
-                        <li>Veicoli commerciali</li>
+                        <strong>Veicoli commerciali.</strong>
                         Devono essere di categoria N1 e N2, nuovi di fabbrica, 100% elettrici e deve essere rottamato un
                         veicolo omologato in una classe inferiore ad Euro 4. In questo caso gli incentivi sono pari a:
 
@@ -101,7 +101,7 @@
                     <ul> - 12.000 euro per i veicoli N2 da 3,5 tonnellate fino a 7 tonnellate</ul>
                     <ul> - 14.000 euro per i veicoli N2 superiori a 7 tonnellate e fino a 12 tonnellate</ul>
 
-                    <li>Ciclomotori e motocicli elettrici e ibridi</li>
+                    <strong>Ciclomotori e motocicli elettrici e ibridi.</strong>
 
                     Di categoria L1e, L2e, L3e, L4e, L5e, L6e, L7
 
@@ -110,14 +110,14 @@
                     <ul> - Contributo pari al 40% del prezzo fino a 4.000 mila euro se viene rottamata una moto in una
                         classe da Euro 0 a 3</ul>
 
-                    <li>Ciclomotori e motocicli termici</li>
+                    <strong>Ciclomotori e motocicli termici.</strong> 
 
                     Devono essere nuovi di fabbrica, di categoria L1e, L2e, L3e, L4e, L5e, L6e, L7)
 
                     <ul> - Contributo del 40% del prezzo, a fronte di uno sconto del venditore del 5%, con prezzo
                         massimo di 2.500 euro.</ul>
 
-                    <li>Car sharing</li>
+                    <Strong>Car sharing.</Strong>
 
                     Una piccola percentuale dei fondi è riservata alle società di car sharing per l'acquisto dei veicoli
                     elettrici, ibridi, plug-in.
