--- a/personale/index.html
+++ b/personale/index.html
@@ -22,7 +22,8 @@
             <div class="navbar-nav">
               <a class="nav-link" href="../index.html">Home</a>
               <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
-              <a class="nav-link active" href="../incentivi/incentivi.html">Incentivi</a>
+              <a class="nav-link" href="../incentivi/incentivi.html">Incentivi</a>
+              <a class="nav-link" href="../about-us/about-us.html">Chi siamo?</a>
             </div>
           </div>
         </div>
