--- a/incentivi/incentivi.html
+++ b/incentivi/incentivi.html
@@ -148,6 +148,7 @@
                     </p>
                 </article>
                 <!-- Cosa aspetti? Fai ora un preventivo! -->
+                <p><a href='../auto/preventivo.php' class='btn btn-outline-success btn-md'>Clicca qui</a> per scoprire il tuo preventivo personalizzato.</p>
             </div>
         </div>
     </main>
