sistemato bug scopri di più

--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -51,7 +51,7 @@
             <h4 class="mb-3">Chi siamo: </h4>
             <div class="our-team">
               <div class="picture">
-                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/3048/3048122.png">
+                <img class="img-fluid" src="/about-us/icons/3048122.png">
               </div>
               <div class="team-content">
                 <h3 class="name">Simone Pascucci</h3>
@@ -68,7 +68,7 @@
           <div class="col-md-6">
             <div class="our-team">
               <div class="picture">
-                <img class="img-fluid" src="https://cdn-icons.flaticon.com/png/512/3006/premium/3006876.png?token=exp=1654016090~hmac=63e1321d2498bea563006a31d48c3654">
+                <img class="img-fluid" src="/about-us/icons/beard.png">
               </div>
               <div class="team-content">
                 <h3 class="name">Giuseppe Pilla</h3>
@@ -86,7 +86,7 @@
           <div class="col-md-6">
             <div class="our-team">
               <div class="picture">
-                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1864/1864593.png">
+                <img class="img-fluid" src="/about-us/icons/1864593.png">
               </div>
               <div class="team-content">
                 <h3 class="name">Matteo Cutroni</h3>
