--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./immagini/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="incentivi/incentivi-style.css">
     <script src="bootstrap.min.js" type="application/javascript"></script>
     <script src="https://unpkg.com/vue@3"></script>
 </head>
@@ -153,15 +154,30 @@
     </form>
     <hr>
     <!--Footer-->
-    <div class="container mt-5 p-3">
-        <div class="row">
-            <div class="text-left text-md-start">
-                <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
-                    Pilla-Pascucci-Cutroni</span>
-            </div>
-        </div>
-        <script src="/news/app_news.js" type="application/javascript"></script>
-    </div>
-</body>
+    <footer>
+        Green Vehicle Demand | Piazzale Aldo Moro 5
+        00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
+        <a class="trans-color-text"
+            href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
+        <span itemprop="telephone">+39 320 98
+            74 562</span>
+        <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html"> privacy</a> | <a target="_blank" href="incentivi/faq.html">
+            FAQ</a>
 
+        <div class="social-cont">
+            <ul class="social-list">
+                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
+                            src="immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
+                            src="immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
+                <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="immagini/twitter.png"
+                            title="twitter" alt="twitter icon"></a></li>
+            </ul>
+            <div class="floatstop"></div>
+        </div>
+        <span class="copyright">
+            <a target="_blank" href="#"><img width="40" src="immagini/logo.png" title="creators"></a>
+              Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+                Pilla-Pascucci-Cutroni</span>
+    </footer>
 </html>
