--- a/privacy.html
+++ b/privacy.html
@@ -7,11 +7,12 @@
     <link rel="icon" type="image/x-icon" href="immagini/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="incentivi/incentivi-style.css">
     <script src="bootstrap.min.js" type="application/javascript"></script>
     <title>Termini e condizioni</title>
 </head>
 
-<body>
+<>
     <main class="container">
         <img src="immagini/logo.png" alt="" height="45px" hspace="10">
         <a class="app-title" class="navbar-brand" href="index.html">Green Vehicle Demand</a>
@@ -216,16 +217,34 @@
             </div>
         </div>
     </main>
-</body>
 
 <!-- Footer -->
-<div class="container mt-5 p-3">
-    <div class="row">
-      <div class="text-left text-md-start">
-        <span class="copyright">Copyright &copy; Progetto Linguaggie e tecnologie per il web 2022
-          Pilla-Pascucci-Cutroni</span>
-      </div>
+
+<footer>
+    Green Vehicle Demand | Piazzale Aldo Moro 5
+    00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
+    <a class="trans-color-text"
+        href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
+    <span itemprop="telephone">+39 320 98
+        74 562</span>
+    <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html"> privacy</a> | <a target="_blank" href="incentivi/faq.html">
+        FAQ</a>
+
+    <div class="social-cont">
+        <ul class="social-list">
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
+                        src="immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
+                        src="immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
+            <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="immagini/twitter.png"
+                        title="twitter" alt="twitter icon"></a></li>
+        </ul>
+        <div class="floatstop"></div>
     </div>
-</body>
+    <span class="copyright">
+        <a target="_blank" href="index.html"><img width="40" src="immagini/logo.png" title="creators"></a>
+          Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+            Pilla-Pascucci-Cutroni</span>
+</footer>
 
 </html>
